--- a/jsfp/build.xml
+++ b/jsfp/build.xml
@@ -1,80 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- ====================================================================== 
-     4 apr. 2016 13:06:34                                                        
-
-	 jsfp     
-     Java SFP Library
-                   
-     vincentb                                                                
-     ====================================================================== -->
 <project name="JSFP" default="default">
-    <description>
-            Java Bus Emulator Interface
-    </description>
-	
-	<property name="src" location="src"/>
-	<property name="build" location="build"/>
-	<property name="jar" location="jsfp.jar"/>
-	<property name="rebus" location="../rebus/rebus.jar" />
-	<property name="tools" location="../nikhef-tools/nikhef-tools.jar" />
-	<property name="rebus_lib" location="../rebus/lib"/>
-	<property name="lib" location="lib"/>
+  <description>
+    Java Bus Emulator Interface
+  </description>
 
-	<target name="default" depends="jar" />
-		
-		
-	
-	<target name="rebus.check">
-		<condition property="rebus.build">
-			<available file="${rebus}"/>
-		</condition>
-	</target>
-	
-	<target name="tools.check">
-		<condition property="tools.build">
-			<available file="${tools}"/>
-		</condition>
-	</target>
+  <property name="src" location="src"/>
+  <property name="build" location="build"/>
+  <property name="jar" location="jsfp.jar"/>
+  <property name="rebus" location="../rebus/rebus.jar" />
+  <property name="tools" location="../nikhef-tools/nikhef-tools.jar" />
+  <property name="rebus_lib" location="../rebus/lib"/>
+  <property name="lib" location="lib"/>
 
-	
-	<target name="rebus" depends="rebus.check" unless="rebus.build">
-		<echo>Compiling REBUS</echo>
-		<ant dir="../rebus" />
-	</target>
+  <target name="default" depends="jar" />
 
-	<target name="tools" depends="tools.check" unless="tools.build">
-		<echo>Compiling Nikhef-Tools</echo>
-		<ant dir="../nikhef-tools" />
-	</target>
-	
+  <target name="rebus.check">
+    <condition property="rebus.build">
+      <available file="${rebus}"/>
+    </condition>
+  </target>
 
-	<target name="jar" depends="compile">
-		
-		
-		<jar destfile="${jar}">
-			<fileset dir="${build}" />
-			<fileset dir="${src}" includes="**/*.xml" />
-			<fileset dir="${src}" includes="META-INF/**/*" />
-		</jar>
-	</target>
-	
-    <target name="compile" depends="rebus">
-    	<mkdir dir="${build}"/>
-    	<javac srcdir="${src}" destdir="${build}" source="1.6" target="1.6" includeantruntime="no">
-    		<classpath>
-		        <pathelement location="${rebus_lib}/JavaFTD2XX-0.2.6.jar"/>
-				<pathelement location="${lib}/luaj-jse-3.0.1.jar"/>
-		        <pathelement location="${rebus}"/>
-				<pathelement location="${tools}"/>
-    		</classpath>
-    	</javac>
-    </target>
+  <target name="tools.check">
+    <condition property="tools.build">
+      <available file="${tools}"/>
+    </condition>
+  </target>
 
-	<target name="clean">
-		  <delete dir="${build}"/>
-		  <delete file="${jar}"/>
-    </target>
 
-	
+  <target name="rebus" depends="rebus.check" unless="rebus.build">
+    <echo>Compiling REBUS</echo>
+    <ant dir="../rebus" />
+  </target>
+
+  <target name="tools" depends="tools.check" unless="tools.build">
+    <echo>Compiling Nikhef-Tools</echo>
+    <ant dir="../nikhef-tools" />
+  </target>
+
+  <target name="jar" depends="compile">
+    <jar destfile="${jar}">
+      <fileset dir="${build}" />
+      <fileset dir="${src}" includes="**/*.xml" />
+      <fileset dir="${src}" includes="META-INF/**/*" />
+    </jar>
+  </target>
+
+  <target name="compile" depends="rebus">
+    <mkdir dir="${build}"/>
+    <javac srcdir="${src}" destdir="${build}" includeantruntime="no" debug="true" debuglevel="lines,vars,source">
+      <classpath>
+        <pathelement location="${rebus_lib}/JavaFTD2XX-0.2.6.jar"/>
+        <pathelement location="${lib}/luaj-jse-3.0.1.jar"/>
+        <pathelement location="${rebus}"/>
+        <pathelement location="${tools}"/>
+      </classpath>
+    </javac>
+  </target>
+
+  <target name="clean">
+    <delete dir="${build}"/>
+    <delete file="${jar}"/>
+  </target>
+
 </project>
-
